// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> error renders 1`] = `
<div>
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <textarea
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
  />
  <span
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<TextArea /> help renders 1`] = `
<div>
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span>
      Help
    </span>
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> label renders 1`] = `
<div>
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> renders 1`] = `
<div>
  <label
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    id="form-0_mock"
  />
</div>
`;
